test/mutation_analysis/s0008_string_to_integer_atoi/hafis/ablation_o3_full/mutants/16/result.txt
./test/mutation_analysis/s0008_string_to_integer_atoi/hafis/ablation_o3_full/mutants/16/Solution.java:19: error: unreachable statement
        while (false) {
                      ^
1 error
